# TCPclient

./: .gitmodules  CMakeLists.txt
GUI/MainWindows/include/: ConnectWindow.h  ConnectionInvite.h  MainWindow.h  Resizable.h  ServerWindow.h  UserConversation.h  UsersWindow.h
GUI/MainWindows/sources/: ConnectWindow.cpp  ConnectionInvite.cpp  MainWindow.cpp  Resizable.cpp  ServerWindow.cpp  UserConversation.cpp  UsersWindow.cpp
GUI/Settings/Config/: fileSettings.cfg  guiSettings.cfg  settings.cfg
GUI/Settings/include/: FileSettings.h  GUISettingsWindow.h  NetworkSettings.h  Resizable.h  StyleSettings.h
GUI/Settings/sources/: FileSettings.cpp  GUISettingsWindow.cpp  NetworkSettings.cpp  Resizable.cpp  StyleSettings.cpp
GUI/Submodules/include/: style.h  switch.h
GUI/Submodules/sources/: switch.cpp
Network/include/: ClientConnection.h  Connection.h  Server.h  ServerConnection.h
Network/sources/: ClientConnection.cpp  Connection.cpp  Server.cpp  ServerConnection.cpp
RequestHandling/include/: Handler.h  RequestHandler.h
RequestHandling/sources/: Handler.cpp  RequestHandler.cpp
demo/: main.cpp
